--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - KAFKA_HOST=kafka
       - KAFKA_PORT=${KAFKA_PORT}
       - KAFKA_TOPIC=network.data.ingested
+      - CORS_ORIGINS=http://localhost:5173,http://localhost:3000,http://127.0.0.1:5173
     networks:
       - nwdaf-network
 
