--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - CORS_ORIGINS=http://localhost:5173,http://localhost:3000,http://127.0.0.1:5173
       - HOST=data-ingestion
       - PORT=7000
+      - PRODUCER_MAX_TIMEOUT=30
     networks:
       - nwdaf-network
 
